updated for junior year, changed font for readability

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="sravya, balasa, sravyabalasa, UCSD, UC, San, Diego, CS, computer, science, portfolio, personal, photography, design">
     <!---STYLE--------->
-    <link rel="stylesheet" href="style/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/css/my-style.css">
     <!---FAVICON------->
     <link rel="shortcut icon" type="png" href="img/logo.png"/>
@@ -23,7 +23,7 @@
         <li><a href="#projects" class="fadelink">projects</a></li>
         <li><a href="#experience" class="fadelink">experience</a></li>
         <li><a href="#interests" class="fadelink">interests</a></li>
-        <li><a href="https://drive.google.com/file/d/16nX3mlIWCnq4DAATe986hHsozd3XmHfi/view?usp=sharing" target=_blank class="fadelink">resume</a></li>
+        <li><a href="https://drive.google.com/file/d/1v2gi9toz8TFb4uqBe9DrIXfRacOBw1Ho/view?usp=sharing" target=_blank class="fadelink">resume</a></li>
       </ul>
     </div>
 
@@ -35,7 +35,7 @@
 
       <div class=content>
         <div class="heading">sravya balasa</div>
-        <div class="subheading">developer | photographer | student</div>
+        <div class="subheading">developer | photographer | learner</div>
 
         <div class="socials">
           <a href=https://github.com/sravyabalasa target=_blank>
@@ -47,11 +47,6 @@
           <a href=https://www.linkedin.com/in/sravyabalasa/ target=_blank>
             <img src="img/linkedin.png" class="icon">
           </a>
-          <!---
-          <a href=https://drive.google.com/file/d/1l7VjaXW7dngnj0iwJLo_doyD6SkNudLk/view?usp=sharing target=_blank>
-            <img src="img/resume.png" class="icon">
-          </a>
-          --->
         </div>
       </div>
 
@@ -61,7 +56,7 @@
         <div class="col-lg-3">
             <div class="titleproj">almounds</div>
             <a href="https://youtu.be/66Q7XpXZKKM" target=_blank><img class="projectimg" src="img/almounds.png"></a>
-            <div class="descriptionproj">almond plant management application</div>
+            <div class="descriptionproj">almond plant application</div>
         </div>
         <div class="col-lg-3">
           <div class="titleproj">noggin login</div>
@@ -80,37 +75,52 @@
         </div>
     </div>
 
-    <div id="experience" class="row">
-      <div class="col-lg-9 col-centered col-md-10 col-sm-10 col-xs-3" >
+    <div id="experience" class="container">
+        <div class="row">
+            <div class="col-sm-6 titleexp">Incoming Software Engineering Intern</div>
+            <div class="col-sm-6 exp">June 2021 - September 2021</div>
+            <div class="yearsexp">Tableau (Salesforce)</div>
+        </div>
 
-        <div class="titleexp titleexptop">Software Engineering Intern<div class="company">Viasat, Inc.</div></div>
-        <div class="yearsexp">June 2020 - September 2020</div>
-        <div class="descriptionexp">Developing a satellite development management tool visualized in 2D and 3D. Users can view and edit any satellites in the catalog as well as create new ones directly through the UX. Technologies include VueJS.</div>
+        <div class="row exptop">
+            <div class="col-sm-6 titleexp">Incoming Software Engineering Intern</div>
+            <div class="col-sm-6 exp">January 2021 - March 2021</div>
+            <div class="yearsexp">Facebook</div>
+        </div>
 
-        <div class="titleexp">Undergraduate Student Researcher<div class="company">UCSD CSE Early Research Scholars Program</div></div>
-        <div class="yearsexp">September 2019 - June 2020</div>
-        <div class="descriptionexp">Developed machine learning models, from RNNs to classification models, to predict when a user will next workout based on data from their previous workouts in order to help people better analyze their workout progress. Our goal was to assist individuals in developing more effective workouts. Technologies include Python, Scikit-learn, TensorFlow, NumPy, and pandas. Our dataset was scraped from the EndoMondo fitness application. Feel free to check out our <a href="https://drive.google.com/file/d/1dqqPLysM8Km7VlotUhOBTC1FaaXF8u0w/view?usp=sharing" target=_blank>Project Poster,</a> <a href="https://docs.google.com/document/d/1rWphvJWOu_T1Kv5Tji93toss2nUyF1dVf8vi8LHpXQo/edit?usp=sharing" target='_blank'>State of Research,</a> and <a href="https://docs.google.com/document/d/10VajC25NAa3OQRM1oqoX65C7e1EpBaUkP0zC1yo0i_c/edit?usp=sharing" target=_blank>User Guide/Source Code</a> for more background on our work.</div>
+        <div class="row exptop">
+            <div class="col-sm-6 titleexp">Software Engineering Intern</div>
+            <div class="col-sm-6 exp">June 2020 - September 2020</div>
+            <div class="yearsexp">Viasat, Inc.</div>
+            <div class="descriptionexp"><span class="tools">Tools: </span>Vue.js, HTML5, Bootstrap, CSS3, Javascript, CesiumJS, OpenLayers, Axios</div>
+            <div class="descriptionexp">I redesigned the UI of a satellite coverage builder tool to streamline the user experience. I extended coverage planning tools on a geospatial platform to support 3D satellite visualizations and integrated search and 2D visualization from a suite of satellite databases and NodeJS API.</div>
+        </div>
 
-        <div class="titleexp">Undergraduate Tutor<div class="company">UCSD CSE Department</div></div>
-        <div class="yearsexp">Jan 2019 - Present</div>
-        <div class="descriptionexp">Tutored for CSE 8A (Introduction to Java & Object Oriented Programming), CSE 12 (Data Structures & Object Oriented Design), CSE 15L (Software Tools & Techniques) with Gary Gillespie and CSE 100 (Advanced Data Structures) with Joe Politz and Niema Moshiri. As a tutor, hosts lab hours to assist students in understanding lecture and programming assignment material as well as debugging strategies. In addition, I assist in the creation and evaluation of labs, homework assignments, midterm/final exams, and exam review materials.</div>
+        <div class="row exptop">
+          <div class="col-sm-6 titleexp">Undergraduate Student Researcher</div>
+          <div class="col-sm-6 exp">September 2019 - June 2020</div>
+          <div class="yearsexp">UCSD CSE Early Research Scholars Program</div>
+          <div class="descriptionexp"><span class="tools">Tools: </span>Python, Keras, Tensorflow, Jupyter, numpy, pandas, scikit-learn</div>
+          <div class="descriptionexp">Developed machine learning models to predict the starting timestamp of a person’s next workout based on their previous workouts to help people better analyze their workout progress. We utilized workout data of 100K users scraped from the fitness app EndoMondo. Feel free to check out our <a href="https://drive.google.com/file/d/1dqqPLysM8Km7VlotUhOBTC1FaaXF8u0w/view?usp=sharing" target=_blank>Project Poster,</a> <a href="https://docs.google.com/document/d/1rWphvJWOu_T1Kv5Tji93toss2nUyF1dVf8vi8LHpXQo/edit?usp=sharing" target='_blank'>State of Research,</a> and <a href="https://docs.google.com/document/d/10VajC25NAa3OQRM1oqoX65C7e1EpBaUkP0zC1yo0i_c/edit?usp=sharing" target=_blank>User Guide/Source Code</a> for more background on our work.</div>  
+        </div>
 
-        <div class="titleexp">Software Engineer<div class="company">Autograder</div></div>
-        <div class="yearsexp">October 2018 - Present</div>
-        <div class="descriptionexp">Team member who develops and manages the UCSD CSE Department’s website <a href="https://autograder.ucsd.edu" target=_blank>autograder.ucsd.edu</a> for grading assignments/exams and managing tutor queues for several computer science and data science classes. The website is currently undergoing a rewrite with a React + Axios frontend and Python + Flask + PostgresSQL backend to allow for easier upkeep and a cleaner UI. Technologies for the current site include Play Framework, Java, and MySQL. Website is utilized by 3000+ students and professors in the CSE Department for daily class usage, homework turnin, and tutor hour queues.</div>
+        <div class="row exptop">
+          <div class="col-sm-6 titleexp">Undergraduate Tutor</div>
+          <div class="col-sm-6 exp">Jan 2019 - Present</div>
+          <div class="yearsexp">UCSD CSE Department</div>
+          <div class="descriptionexp">As a tutor, I host lab hours to guide students in improving code correctness, efficiency of algorithm implementation, and performance. In addition, I lead exam review sessions and develop course material such as exams, homework assignments, and labs. I have tutored for CSE 8A (Introduction to Java & OOP), CSE 12 (Data Structures & Object Oriented Design), CSE 15L (Software Tools & Techniques), and CSE 110 (Software Engineering) with Gary Gillespie and CSE 100 (Advanced Data Structures) with Joe Politz and Niema Moshiri.</div>
+        </div>
 
-        <div class="titleexp">Director of Technology<div class="company">Project: Website</div></div>
-        <div class="yearsexp">June 2019 - Present</div>
-        <div class="descriptionexp">Project: Website is a nonprofit that develops websites for nonprofits. I am developing the backend of the all-in-one admin, staff, NPO and volunteer developer dashboard and messaging platform with automated emails. Applications for a program cycle can be submitted and evaluated. Volunteer developers are paired with an NPO and can converse with each other and their staff moderator. Volunteer developers will be able to access the complimentary software tools package as well. Technologies include Django Framework, Python, MySQL, Auth0 for login, and SendGrid for emails.</div>
-
-        <div class="titleexp">SWE Intern<div class="company">The Good Face Project</div></div>
-        <div class="yearsexp">April 2019 - September 2019</div>
-        <div class="descriptionexp">Developing an Angular JS testing framework for external calls to the “Best Match” and “Safety” APIs which find the best match to a beauty product and the Good Face Project safety rating for a beauty product respectively.</div>
-
-      </div>
+        <div class="row exptop">
+          <div class="col-sm-6 titleexp">Lead Full-Stack Developer</div>
+          <div class="col-sm-6 exp">October 2018 - Present</div>
+          <div class="yearsexp">Autograder</div>
+          <div class="descriptionexp"><span class="tools">Tools: </span>Python, Flask, PostgreSQL, React, Javascript, Axios</div>
+          <div class="descriptionexp">I am managing and developing on a team revamping a legacy web application used by 3000+ UCSD CSE students and professors to manage tutor queues and assignments, <a href="https://autograder.ucsd.edu" target=_blank>autograder.ucsd.edu</a>. I am leading frontend development of a scodebase rewrite to provide an easily maintainable and improved UX.</div>
+        </div>
     </div>
 
-    <div id="interests" class="row">
+    <div id="interests" class="container">
       <div class="col-lg-4">
         <div class="titleint titleinttop">photography</div>
         <a href="https://www.instagram.com/photoswithsravya" target=_blank><img class=interestsimg width=100% src="img/instagramfeed.jpg"></a>
@@ -119,7 +129,7 @@
       <div class="col-lg-4">
         <div class="titleint">calligraphy</div>
         <a href="https://www.sravyabalasa.com/galleries/design" target=_blank><img class=interestsimg width=100% src="img/calligraphy.png"></a>
-        <div class="descriptionint">From a young age, I've written in cursive so, naturally, once I discovered the world of handlettering, I never left. I enjoy creating cards, painting wood rounds, designing posters, taking elaborate notes, drawing every type of abstract doodle or flower, you name it. Not only is it a creative, experimental outlet for me and therapeutic, but I cherish the smile it brings on faces with every gift I create. You can view more of my design work <a href="https://www.sravyabalasa.com/galleries/design" target=_blank>here.</a></div>
+        <div class="descriptionint">From a young age, I've written in cursive so, naturally, once I discovered handlettering, I never left. I enjoy creating cards, painting wood rounds, designing posters, taking elaborate notes, drawing every type of abstract doodle or flower, you name it. Not only is it a creative, experimental outlet for me and therapeutic, but I cherish the smile it brings on faces with every gift I create. You can view more of my design work <a href="https://www.sravyabalasa.com/galleries/design" target=_blank>here.</a></div>
       </div>
       <div class="col-lg-4">
         <div class="titleint">reading</div>
@@ -131,11 +141,12 @@
 
     <div id="about">
       <div class="titleabt">hi, i'm sravya.</div>
-      <div class="descriptionabt">I'm a junior computer science student at UC San Diego, graduating in June 2022. I'm currently looking for a Software Engineering Internship for Summer 2021 where I can expand my skills in algorithmic thinking, problem solving, creating, and experience the workflow of industry from start to finish. I'm a learner, I'm passionate, I'm an artist, I'm a developer.</div>
+      <div class="descriptionabt">I'm a junior at UC San Diego studying Computer Science and Design, graduating in June 2022. From the products I create to those I mentor, I aim to benefit the lives of others around me. I'm a learner, I'm passionate, I'm an artist, I'm a developer.</div>
       <div class="descriptionabt">Talk to me about it at <b>sbalasa[@]ucsd[.]edu</b></div>
     </div>
-
   </body>
+
+  <!--I'm currently looking for a Software Engineering Internship for Summer 2021 where I can expand my skills in algorithmic thinking, problem solving, creating, and experience the workflow of industry from start to finish. -->
 
   <!-- jQuery import -->
   <script
@@ -146,6 +157,10 @@
   <script src="style/js/script.js"></script>
   <!-- Smooth Scroll: https://www.w3schools.com/howto/howto_css_smooth_scroll.asp -->
   <script src="style/js/smoothscroll.js"></script>
-  <script src="style/js/bootstrap.min.js"></script>
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </html>
