navbar works on desktop

--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
 		<script src="https://kit.fontawesome.com/94394b68a0.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<div class="initials">
+		<!-- <div class="initials">
 			<a href="#home"><img class="logo" src="images/logo.png"></a>
+		</div> -->
+
+		<div class="outer-nav">
+			<div class="navbar inverse">
+				<h6><a href="#about">&nbsp;about&nbsp;</a></h6>
+				<h6><a href="#experience">&nbsp;experience&nbsp;</a></h6>
+				<h5 class="bold"><a href="#home">&nbsp;&nbsp;SB&nbsp;&nbsp;</a></h5>
+				<h6><a href="#interests">&nbsp;interests&nbsp;</a></h6>
+				<h6><a href="#contact">&nbsp;contact&nbsp;</a></h6>
+			</div>
 		</div>
 
 		<div class="down">
