--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 		<div class="outer-nav">
 			<div class="navbar inverse">
-				<h6><a href="#about">&nbsp;about&nbsp;</a></h6>
 				<h6><a href="#experience">&nbsp;experience&nbsp;</a></h6>
+				<h6><a href="#intro">&nbsp;about&nbsp;</a></h6>
 				<h5 class="bold"><a href="#home">&nbsp;&nbsp;SB&nbsp;&nbsp;</a></h5>
 				<h6><a href="#interests">&nbsp;interests&nbsp;</a></h6>
 				<h6><a href="#contact">&nbsp;contact&nbsp;</a></h6>
