need to fix colors and scrolling to hoome

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css"> <!-- more specific css-->
+		<link href="css/hamburgers.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;800&display=swap" rel="stylesheet">
 		<title>Sravya Balasa</title>
 
@@ -18,14 +19,21 @@
 		<!-- <div class="initials">
 			<a href="#home"><img class="logo" src="images/logo.png"></a>
 		</div> -->
+		
+		<!-- elastic -->
+		<div id="hamburger" class="hamburger hamburger--spring hamburger-vis navbar-top" type="button">
+			<span class="hamburger-box hamburger-right">
+				<span class="hamburger-inner"></span>
+			</span>
+		</div>
 
 		<div class="outer-nav">
-			<div class="navbar inverse">
-				<h6><a href="#experience">&nbsp;experience&nbsp;</a></h6>
-				<h6><a href="#intro">&nbsp;about&nbsp;</a></h6>
-				<h5 class="bold"><a href="#home">&nbsp;&nbsp;SB&nbsp;&nbsp;</a></h5>
-				<h6><a href="#interests">&nbsp;interests&nbsp;</a></h6>
-				<h6><a href="#contact">&nbsp;contact&nbsp;</a></h6>
+			<div class="navbar inverse" onclick=toggleNav()>
+				<h6><a data-scroll class="nav-text" href="#experience">&nbsp;experience&nbsp;</a></h6>
+				<h6><a data-scroll class="nav-text" href="#intro">&nbsp;about&nbsp;</a></h6>
+				<h5 class="bold name"><a data-scroll href="#home">&nbsp;&nbsp;SB&nbsp;&nbsp;</a></h5>
+				<h6><a data-scroll class="nav-text" href="#interests">&nbsp;interests&nbsp;</a></h6>
+				<h6><a data-scroll class="nav-text" href="#contact">&nbsp;contact&nbsp;</a></h6>
 			</div>
 		</div>
 
@@ -147,7 +155,14 @@
 		</div>
 
 		<script src="js/script.js"></script>
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
+
+		<script>
+			var scroll = new SmoothScroll('a[href*="#"]');
+		</script>
+
+		<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 	</body>
