--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 		</div> -->
 		
 		<!-- elastic -->
-		<div id="hamburger" class="hamburger hamburger--spring hamburger-vis navbar-top" type="button">
+		<button id="hamburger" class="hamburger hamburger--spring hamburger-vis navbar-top" type="button">
 			<span class="hamburger-box hamburger-right">
 				<span class="hamburger-inner"></span>
 			</span>
-		</div>
+		</button>
 
 		<div class="outer-nav">
 			<div class="navbar inverse" onclick=toggleNav()>
