--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css"> <!-- more specific css-->
-		<link href="css/hamburgers.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;800&display=swap" rel="stylesheet">
 		<title>Sravya Balasa</title>
 
@@ -16,24 +15,13 @@
 		<script src="https://kit.fontawesome.com/94394b68a0.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<!-- <div class="initials">
-			<a href="#home"><img class="logo" src="images/logo.png"></a>
-		</div> -->
-		
-		<!-- elastic -->
-		<button id="hamburger" class="hamburger hamburger--spring hamburger-vis navbar-top" type="button">
-			<span class="hamburger-box hamburger-right">
-				<span class="hamburger-inner"></span>
-			</span>
-		</button>
-
 		<div class="outer-nav">
-			<div class="navbar inverse" onclick=toggleNav()>
-				<h6><a data-scroll class="nav-text" href="#experience">&nbsp;experience&nbsp;</a></h6>
-				<h6><a data-scroll class="nav-text" href="#intro">&nbsp;about&nbsp;</a></h6>
+			<div class="navbar inverse">
+				<h6><a data-scroll href="#experience">&nbsp;experience&nbsp;</a></h6>
+				<h6><a data-scroll href="#intro">&nbsp;about&nbsp;</a></h6>
 				<h5 class="bold name"><a data-scroll href="#home">&nbsp;&nbsp;SB&nbsp;&nbsp;</a></h5>
-				<h6><a data-scroll class="nav-text" href="#interests">&nbsp;interests&nbsp;</a></h6>
-				<h6><a data-scroll class="nav-text" href="#contact">&nbsp;contact&nbsp;</a></h6>
+				<h6><a data-scroll href="#interests">&nbsp;interests&nbsp;</a></h6>
+				<h6><a data-scroll href="#contact">&nbsp;contact&nbsp;</a></h6>
 			</div>
 		</div>
 
